# simplePhysicsEngine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/common/: common.h  header.h  logger.h  macro.h  math.h
src/core/: broadPhase.h  constraints.h  narrowPhase.cpp  narrowPhase.h  object.cpp  object.h  shape.cpp  shape.h  world.cpp  world.h
src/render/: draw.cpp  draw.h  render.h
